<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Web View View Controller-->
        <scene sceneID="rJo-jL-RaU">
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="41I-pL-p2d" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="D4h-gj-8hm">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LoO-4Y-F3F">
                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                <color key="backgroundColor" name="white"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j5b-JC-xVf">
                                <rect key="frame" x="9" y="29" width="24" height="24"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="back_black"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="41I-pL-p2d" eventType="touchUpInside" id="vrI-v1-VFt"/>
                                </connections>
                            </button>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TK3-Sz-7Jg">
                                <rect key="frame" x="0.0" y="53" width="393" height="4"/>
                                <color key="backgroundColor" name="black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="dBD-1R-qeC"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="TK3-Sz-7Jg" firstAttribute="top" secondItem="j5b-JC-xVf" secondAttribute="bottom" id="0FI-Mi-rwH"/>
                            <constraint firstItem="j5b-JC-xVf" firstAttribute="leading" secondItem="dBD-1R-qeC" secondAttribute="leading" constant="9" id="9uM-35-Ua9"/>
                            <constraint firstItem="LoO-4Y-F3F" firstAttribute="leading" secondItem="D4h-gj-8hm" secondAttribute="leading" id="Dlf-3m-C1I"/>
                            <constraint firstAttribute="trailing" secondItem="TK3-Sz-7Jg" secondAttribute="trailing" id="En4-bJ-iUD"/>
                            <constraint firstItem="LoO-4Y-F3F" firstAttribute="top" secondItem="D4h-gj-8hm" secondAttribute="top" id="cE5-AZ-3sC"/>
                            <constraint firstItem="j5b-JC-xVf" firstAttribute="top" secondItem="dBD-1R-qeC" secondAttribute="top" constant="29" id="fOC-Dc-Mfb"/>
                            <constraint firstItem="LoO-4Y-F3F" firstAttribute="bottom" secondItem="D4h-gj-8hm" secondAttribute="bottom" id="ft1-p7-Mq7"/>
                            <constraint firstItem="LoO-4Y-F3F" firstAttribute="trailing" secondItem="D4h-gj-8hm" secondAttribute="trailing" id="kxF-Nb-h1M"/>
                            <constraint firstItem="TK3-Sz-7Jg" firstAttribute="leading" secondItem="D4h-gj-8hm" secondAttribute="leading" id="rq9-LI-YFf"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="progressView" destination="TK3-Sz-7Jg" id="dbS-LF-EX4"/>
                        <outlet property="webView" destination="LoO-4Y-F3F" id="n3A-NY-DmD"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3sf-qe-5Zu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="79.710144927536234" y="-1665.4017857142856"/>
        </scene>
        <!--Auth View Controller-->
        <scene sceneID="VyJ-3f-LUw">
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="KHZ-3U-2VZ" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="O3t-Ai-6Vk">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="gdH-Nx-bof">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="JaD-mi-RO0"/>
                                    <constraint firstAttribute="width" constant="60" id="gio-pU-LOH"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tKC-fT-D9w">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="white"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ewK-Ut-BRG"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="black"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <segue destination="41I-pL-p2d" kind="presentation" identifier="ShowWebView" modalPresentationStyle="overFullScreen" id="AGi-XF-Exl"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="DLw-1E-c03"/>
                        <color key="backgroundColor" name="black"/>
                        <constraints>
                            <constraint firstItem="gdH-Nx-bof" firstAttribute="centerX" secondItem="O3t-Ai-6Vk" secondAttribute="centerX" id="9pw-LN-1r0"/>
                            <constraint firstItem="DLw-1E-c03" firstAttribute="trailing" secondItem="tKC-fT-D9w" secondAttribute="trailing" constant="16" id="AVY-bH-tHx"/>
                            <constraint firstItem="DLw-1E-c03" firstAttribute="bottom" secondItem="tKC-fT-D9w" secondAttribute="bottom" constant="124" id="K7W-Ry-c9O"/>
                            <constraint firstItem="tKC-fT-D9w" firstAttribute="centerX" secondItem="O3t-Ai-6Vk" secondAttribute="centerX" id="SDM-oV-FMl"/>
                            <constraint firstItem="gdH-Nx-bof" firstAttribute="centerY" secondItem="O3t-Ai-6Vk" secondAttribute="centerY" id="iCk-cs-d7E"/>
                            <constraint firstItem="tKC-fT-D9w" firstAttribute="leading" secondItem="DLw-1E-c03" secondAttribute="leading" constant="16" id="jVf-Wx-l3v"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="qzk-yb-oXM"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cVC-ao-Zla" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-774" y="-1665"/>
        </scene>
    </scenes>
    <resources>
        <image name="auth_screen_logo" width="60" height="60"/>
        <image name="back_black" width="24" height="24"/>
        <namedColor name="black">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.12941176470588237" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="white">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
