...
        cellImage.layer.masksToBounds = true
        return cellImage
    }()
    private let likeButton: UIButton = {
        let likeButton = UIButton()
        likeButton.translatesAutoresizingMaskIntoConstraints = false
        likeButton.accessibilityIdentifier = "LikeButton"
        likeButton.setTitle("", for: .normal)
        likeButton.addTarget(nil, action: #selector(likeButtonClicked), for: .touchUpInside)
        return likeButton
    }()
    
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
...
